Return empty list when prefix is not matched in suggest
Prior to this fix the code was returning a GroupReference with
a `null` group UUID when no matches were found for the prefix.

Having a `null` UUID can cause NPE later on in the code.

Issue: Bug 16571
Change-Id: I414154c50dc0530dad817f1a8291c6bf0ecd7a35
(cherry picked from commit 34f2b6a4a6e591d7ea23dcc46d0402beeee70f9f)